Agregando la misma funcionalidad de lista de colaboradores para reportes horasExtra y Feriados